--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.7",
     "postcss": "^8.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
     "tailwindcss": "^3.4.17"
   },
