--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
+    "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
