Implementacion de base de datos

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.7",
+    "firebase": "^11.4.0",
     "framer-motion": "^12.4.1",
+    "i": "^0.3.7",
     "postcss": "^8.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
