--- a/package.json
+++ b/package.json
@@ -7,18 +7,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.7",
     "firebase": "^11.4.0",
-    "framer-motion": "^12.4.1",
+    "framer-motion": "^12.5.0",
     "i": "^0.3.7",
     "postcss": "^8.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.4.0",
+    "recharts": "^2.15.1",
     "tailwind-scrollbar-hide": "^2.0.0",
     "tailwindcss": "^3.4.17"
   },
