--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postcss": "^8.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-easy-crop": "^5.4.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.4.0",
     "recharts": "^2.15.1",
